force-app/main/default/objects/Project_Assessment__c/fields/O_M_Agreement__c.field-meta.xml
<CustomField>
    <fullName>O_M_Agreement__c</fullName>
    <label>O&amp;M Agreement</label>
    <type>TextArea</type>
</CustomField>