force-app/main/default/objects/Project_Assessment__c/fields/O_M_by_Mainspring__c.field-meta.xml
<CustomField>
    <fullName>O_M_by_Mainspring__c</fullName>
    <inlineHelpText>Is MSE providing O&amp;M (+ contract duration) or is O&amp;M self-performed</inlineHelpText>
    <label>O&amp;M by Mainspring?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>