force-app/main/default/objects/Project_Assessment__c/fields/O_M_servicing_clearances_incl__c.field-meta.xml
<CustomField>
    <fullName>O_M_servicing_clearances_incl__c</fullName>
    <inlineHelpText>O&amp;M servicing - appropriate clearances included for O&amp;M maintainence activities?</inlineHelpText>
    <label>O&amp;M servicing - clearances incl?</label>
    <type>TextArea</type>
</CustomField>