force-app/main/default/objects/Project_Assessment__c/fields/O_M_term__c.field-meta.xml
<CustomField>
    <fullName>O_M_term__c</fullName>
    <label>O&amp;M term</label>
    <length>250</length>
    <type>Text</type>
</CustomField>