force-app/main/default/objects/Project_Assessment__c/fields/Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stage__c</fullName>
    <label>Opportunity Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Preliminary Meeting</fullName>
            </value>
            <value>
                <fullName>Initial Assessment</fullName>
            </value>
            <value>
                <fullName>Indicative Proposal</fullName>
            </value>
            <value>
                <fullName>Firm Proposal</fullName>
            </value>
            <value>
                <fullName>Preliminary Discussions</fullName>
            </value>
            <value>
                <fullName>Proposal/RFP Generation</fullName>
            </value>
            <value>
                <fullName>Term Sheet</fullName>
            </value>
            <value>
                <fullName>Negotiating Contract</fullName>
            </value>
            <value>
                <fullName>Final Site Development</fullName>
            </value>
            <value>
                <fullName>Closed Won</fullName>
            </value>
            <value>
                <fullName>Closed Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>