force-app/main/default/objects/Project_Assessment__c/fields/Ordinances_restricting_new_gas_service__c.field-meta.xml
<CustomField>
    <fullName>Ordinances_restricting_new_gas_service__c</fullName>
    <inlineHelpText>Are there any city/county/state ordinances that restrict new gas service connections, for building service or for generators?</inlineHelpText>
    <label>Ordinances restricting new gas service?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>