force-app/main/default/objects/Project_Assessment__c/fields/Other_Approvals_Required__c.field-meta.xml
<CustomField>
    <fullName>Other_Approvals_Required__c</fullName>
    <label>Other Approvals Required</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>