force-app/main/default/objects/Project_Assessment__c/fields/Participate_in_a_grid_services_program__c.field-meta.xml
<CustomField>
    <fullName>Participate_in_a_grid_services_program__c</fullName>
    <inlineHelpText>Is the customer planning to participate in a grid services program (e.g., demand response).  If so, which program?</inlineHelpText>
    <label>Participate in a grid services program?</label>
    <type>TextArea</type>
</CustomField>