force-app/main/default/objects/Project_Assessment__c/fields/Path_for_non_solar_and_non_battery__c.field-meta.xml
<CustomField>
    <fullName>Path_for_non_solar_and_non_battery__c</fullName>
    <inlineHelpText>Does the utility explicitly recognize a path for non-solar and non-battery interconnections?</inlineHelpText>
    <label>Path for non-solar and non-battery?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>