force-app/main/default/objects/Project_Assessment__c/fields/Permitting_Type__c.field-meta.xml
<CustomField>
    <fullName>Permitting_Type__c</fullName>
    <label>Permitting Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Permanent</fullName>
            </value>
            <value>
                <fullName>Temp Testing</fullName>
            </value>
            <value>
                <fullName>Temp to Permanent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>