force-app/main/default/objects/Project_Assessment__c/fields/Phased_Project__c.field-meta.xml
<CustomField>
    <fullName>Phased_Project__c</fullName>
    <label>Phased Project?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>