force-app/main/default/objects/Project_Assessment__c/fields/Primary_Fuel_type__c.field-meta.xml
<CustomField>
    <fullName>Primary_Fuel_type__c</fullName>
    <label>Primary Fuel type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Natural Gas</fullName>
            </value>
            <value>
                <fullName>Hydrogen</fullName>
            </value>
            <value>
                <fullName>Ammonia</fullName>
            </value>
            <value>
                <fullName>Propane</fullName>
            </value>
            <value>
                <fullName>Syngas</fullName>
            </value>
            <value>
                <fullName>Directed Biogas</fullName>
            </value>
            <value>
                <fullName>On-site Biogas</fullName>
            </value>
            <value>
                <fullName>RNG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>