force-app/main/default/objects/Project_Assessment__c/fields/Project_Delivery_Point_Person__c.field-meta.xml
<CustomField>
    <fullName>Project_Delivery_Point_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Delivery Point Person</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Project_Assessments4</relationshipName>
    <type>Lookup</type>
</CustomField>