force-app/main/default/objects/Project_Assessment__c/fields/Project_scope_purpose__c.field-meta.xml
<CustomField>
    <fullName>Project_scope_purpose__c</fullName>
    <label>Project scope / purpose</label>
    <type>TextArea</type>
</CustomField>