force-app/main/default/objects/Project_Assessment__c/fields/Project_type__c.field-meta.xml
<CustomField>
    <fullName>Project_type__c</fullName>
    <label>Project type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5MW+</fullName>
            </value>
            <value>
                <fullName>Public agency (inclusive of municipalities)</fullName>
            </value>
            <value>
                <fullName>Hydrogen/ammonia</fullName>
            </value>
            <value>
                <fullName>Undisturbed land</fullName>
            </value>
            <value>
                <fullName>Prior hazardous materials inclusive of fuel tanks</fullName>
            </value>
            <value>
                <fullName>Known past permitting challenges</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>