force-app/main/default/objects/Project_Assessment__c/fields/Projected_hours_LGens_will_run__c.field-meta.xml
<CustomField>
    <fullName>Projected_hours_LGens_will_run__c</fullName>
    <inlineHelpText>Projected number of hours LGens will run per year</inlineHelpText>
    <label>Projected hours LGens will run</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>