force-app/main/default/objects/Project_Assessment__c/fields/Property_Ownership_name__c.field-meta.xml
<CustomField>
    <fullName>Property_Ownership_name__c</fullName>
    <label>Property Ownership &amp; name</label>
    <type>TextArea</type>
</CustomField>