force-app/main/default/objects/Project_Assessment__c/fields/Proposed_Electrical_IX_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Electrical_IX_Strategy__c</fullName>
    <inlineHelpText>Proposed Electrical IX Strategy, (i.e. Non-Export, SGIP, Departing Load)</inlineHelpText>
    <label>Proposed Electrical IX Strategy</label>
    <type>TextArea</type>
</CustomField>