force-app/main/default/objects/Project_Assessment__c/fields/Proposed_Fuel_Rate_Model_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Fuel_Rate_Model_Strategy__c</fullName>
    <inlineHelpText>Proposed Fuel Rate Model Strategy (i.e. CoGen, SGIP (Self Generation Incentive Program)</inlineHelpText>
    <label>Proposed Fuel Rate Model Strategy</label>
    <type>TextArea</type>
</CustomField>