force-app/main/default/objects/Project_Assessment__c/fields/Proximity_to_sensitive_receptors__c.field-meta.xml
<CustomField>
    <fullName>Proximity_to_sensitive_receptors__c</fullName>
    <inlineHelpText>Special requirements related to proximity to sensitive receptors (e.g., schools or residential areas)?</inlineHelpText>
    <label>Proximity to sensitive receptors?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>