force-app/main/default/objects/Project_Assessment__c/fields/Public_Affairs_Notes__c.field-meta.xml
<CustomField>
    <fullName>Public_Affairs_Notes__c</fullName>
    <label>Electrical IX - Public Affairs Notes</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>