force-app/main/default/objects/Project_Assessment__c/fields/Public_Affairs_Point_Person__c.field-meta.xml
<CustomField>
    <fullName>Public_Affairs_Point_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Public Affairs Point Person</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Project_Assessments3</relationshipName>
    <type>Lookup</type>
</CustomField>