force-app/main/default/objects/Project_Assessment__c/fields/Recommendation_on_pursuing_sales_opps__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_on_pursuing_sales_opps__c</fullName>
    <inlineHelpText>Provide a recommendation on whether or not to pursue sales opportunities in this territory</inlineHelpText>
    <label>Recommendation on pursuing sales opps</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>