force-app/main/default/objects/Project_Assessment__c/fields/Regulatory_Assessment_not_required__c.field-meta.xml
<CustomField>
    <fullName>Regulatory_Assessment_not_required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Regulatory Assessment not required</label>
    <type>Checkbox</type>
</CustomField>