force-app/main/default/objects/Project_Assessment__c/fields/Replacement_for_Existing_Generation__c.field-meta.xml
<CustomField>
    <fullName>Replacement_for_Existing_Generation__c</fullName>
    <label>Replacement for Existing Generation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>