force-app/main/default/objects/Project_Assessment__c/fields/Requirement_to_Use_Customer_s_Contractor__c.field-meta.xml
<CustomField>
    <fullName>Requirement_to_Use_Customer_s_Contractor__c</fullName>
    <label>Requirement to Use Customer&apos;s Contractor</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>