force-app/main/default/objects/Project_Assessment__c/fields/Responsible_Installation_Party__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Installation_Party__c</fullName>
    <label>Responsible Installation Party</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MSE</fullName>
            </value>
            <value>
                <fullName>3rd Party EPC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>