force-app/main/default/objects/Project_Assessment__c/fields/Restrictions_on_AHJ_inspections__c.field-meta.xml
<CustomField>
    <fullName>Restrictions_on_AHJ_inspections__c</fullName>
    <inlineHelpText>Any restrictions on winter work / AHJ inspections?</inlineHelpText>
    <label>Any AHJ restrictions?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>