force-app/main/default/objects/Project_Assessment__c/fields/Reviewed_the_interconnection_rules__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_the_interconnection_rules__c</fullName>
    <inlineHelpText>Have we reviewed the interconnection rules to confirm the timeline and ability to interconnect?</inlineHelpText>
    <label>Reviewed the interconnection rules?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>