force-app/main/default/objects/Project_Assessment__c/fields/Safety_Permitting__c.field-meta.xml
<CustomField>
    <fullName>Safety_Permitting__c</fullName>
    <label>Safety Permitting</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>