force-app/main/default/objects/Project_Assessment__c/fields/Sales_Analyst__c.field-meta.xml
<CustomField>
    <fullName>Sales_Analyst__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Analyst</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Project_Assessments6</relationshipName>
    <type>Lookup</type>
</CustomField>