force-app/main/default/objects/Project_Assessment__c/fields/Sales_Department__c.field-meta.xml
<CustomField>
    <fullName>Sales_Department__c</fullName>
    <label>Sales Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Data Center</fullName>
            </value>
            <value>
                <fullName>C&amp;I</fullName>
            </value>
            <value>
                <fullName>Biogas</fullName>
            </value>
            <value>
                <fullName>Mobility</fullName>
            </value>
            <value>
                <fullName>Energy Infrastructure</fullName>
            </value>
            <value>
                <fullName>Utility</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>