force-app/main/default/objects/Project_Assessment__c/fields/Sales_Program__c.field-meta.xml
<CustomField>
    <fullName>Sales_Program__c</fullName>
    <label>Sales Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Indirect (MSE Reseller)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>