force-app/main/default/objects/Project_Assessment__c/fields/Sales_Purchase_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Sales_Purchase_Vehicle__c</fullName>
    <formula>TEXT(Deal_type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Purchase Vehicle</label>
    <type>Text</type>
</CustomField>