force-app/main/default/objects/Project_Assessment__c/fields/Secondary_Fuel_Type__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Fuel_Type__c</fullName>
    <label>Secondary Fuel Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Natural Gas</fullName>
            </value>
            <value>
                <fullName>Directed Biogas</fullName>
            </value>
            <value>
                <fullName>On-site Biogas</fullName>
            </value>
            <value>
                <fullName>RNG</fullName>
            </value>
            <value>
                <fullName>Propane</fullName>
            </value>
            <value>
                <fullName>Hydrogen</fullName>
            </value>
            <value>
                <fullName>Ammonia</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>