force-app/main/default/objects/Project_Assessment__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site</label>
    <referenceTo>Sites__c</referenceTo>
    <relationshipLabel>Project Assessments</relationshipLabel>
    <relationshipName>Project_Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>