force-app/main/default/objects/Project_Assessment__c/fields/Site_Annual_Electric_Consumption_kWh__c.field-meta.xml
<CustomField>
    <fullName>Site_Annual_Electric_Consumption_kWh__c</fullName>
    <label>Site Annual Electric Consumption (kWh)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>