force-app/main/default/objects/Project_Assessment__c/fields/Site_Concerns_or_Restrictions__c.field-meta.xml
<CustomField>
    <fullName>Site_Concerns_or_Restrictions__c</fullName>
    <label>Site Concerns or Restrictions</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>