force-app/main/default/objects/Project_Assessment__c/fields/Site_description__c.field-meta.xml
<CustomField>
    <fullName>Site_description__c</fullName>
    <label>Site description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>