force-app/main/default/objects/Project_Assessment__c/fields/Site_Elevation_meters__c.field-meta.xml
<CustomField>
    <fullName>Site_Elevation_meters__c</fullName>
    <label>Site Elevation (meters)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>