force-app/main/default/objects/Project_Assessment__c/fields/Site_Elevation_Plan_for_air_permitting__c.field-meta.xml
<CustomField>
    <fullName>Site_Elevation_Plan_for_air_permitting__c</fullName>
    <label>Site/Elevation Plan (for air permitting)</label>
    <type>TextArea</type>
</CustomField>