force-app/main/default/objects/Project_Assessment__c/fields/Site_in_a_CA_disadvantage_community__c.field-meta.xml
<CustomField>
    <fullName>Site_in_a_CA_disadvantage_community__c</fullName>
    <inlineHelpText>Is the site located in a CA disadvantaged community, indicating it could be eligible for gov&apos;t funding?</inlineHelpText>
    <label>Site in a CA disadvantage community?</label>
    <type>TextArea</type>
</CustomField>