force-app/main/default/objects/Project_Assessment__c/fields/Site_Layout_and_SLD__c.field-meta.xml
<CustomField>
    <fullName>Site_Layout_and_SLD__c</fullName>
    <label>Site Layout and SLD</label>
    <type>TextArea</type>
</CustomField>