force-app/main/default/objects/Project_Assessment__c/fields/Site_Owned_or_Leased__c.field-meta.xml
<CustomField>
    <fullName>Site_Owned_or_Leased__c</fullName>
    <label>Site Owned or Leased?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Owned</fullName>
            </value>
            <value>
                <fullName>Leased</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>