force-app/main/default/objects/Project_Assessment__c/fields/Special_Conditional_Use_Permit_required__c.field-meta.xml
<CustomField>
    <fullName>Special_Conditional_Use_Permit_required__c</fullName>
    <inlineHelpText>Is a Special or Conditional Use Permit required?</inlineHelpText>
    <label>Special/Conditional Use Permit required?</label>
    <type>TextArea</type>
</CustomField>