force-app/main/default/objects/Project_Assessment__c/fields/Special_regulatory_requirements__c.field-meta.xml
<CustomField>
    <fullName>Special_regulatory_requirements__c</fullName>
    <inlineHelpText>Any other special regulatory requirements to be aware of?</inlineHelpText>
    <label>Special regulatory requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>