force-app/main/default/objects/Project_Assessment__c/fields/Special_studies_required__c.field-meta.xml
<CustomField>
    <fullName>Special_studies_required__c</fullName>
    <label>Special studies required</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>