force-app/main/default/objects/Project_Assessment__c/fields/Specific_Access_Restrictions_Security__c.field-meta.xml
<CustomField>
    <fullName>Specific_Access_Restrictions_Security__c</fullName>
    <inlineHelpText>Any Specific Access Restrictions / Additional Security</inlineHelpText>
    <label>Specific Access Restrictions/ Security</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>