force-app/main/default/objects/Project_Assessment__c/fields/Specific_Plan_Concerns__c.field-meta.xml
<CustomField>
    <fullName>Specific_Plan_Concerns__c</fullName>
    <label>Specific Plan Concerns</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>