force-app/main/default/objects/Project_Assessment__c/fields/Standard_gas_generation_process__c.field-meta.xml
<CustomField>
    <fullName>Standard_gas_generation_process__c</fullName>
    <inlineHelpText>Is there a standard interconnection for gas generation process?</inlineHelpText>
    <label>Standard gas generation process?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>