force-app/main/default/objects/Project_Assessment__c/fields/Standby_service_departing_load_charges__c.field-meta.xml
<CustomField>
    <fullName>Standby_service_departing_load_charges__c</fullName>
    <inlineHelpText>Does the Utility have standby service and/or departing load charges?</inlineHelpText>
    <label>Standby service/departing load charges?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>