force-app/main/default/objects/Project_Assessment__c/fields/Street_1__c.field-meta.xml
<CustomField>
    <fullName>Street_1__c</fullName>
    <label>Street 1</label>
    <type>TextArea</type>
</CustomField>