force-app/main/default/objects/Project_Assessment__c/fields/Support_Scope_and_Pricing_From_MSE__c.field-meta.xml
<CustomField>
    <fullName>Support_Scope_and_Pricing_From_MSE__c</fullName>
    <inlineHelpText>Support Scope and Pricing From Mainspring</inlineHelpText>
    <label>Support Scope and Pricing From MSE</label>
    <length>200</length>
    <type>Text</type>
</CustomField>