force-app/main/default/objects/Project_Assessment__c/fields/System_Operation_Rate_if_ESA__c.field-meta.xml
<CustomField>
    <fullName>System_Operation_Rate_if_ESA__c</fullName>
    <label>System Operation Rate (if ESA)</label>
    <type>TextArea</type>
</CustomField>