force-app/main/default/objects/Project_Assessment__c/fields/Timeframe_for_Project_Completion__c.field-meta.xml
<CustomField>
    <fullName>Timeframe_for_Project_Completion__c</fullName>
    <inlineHelpText>Customer&apos;s Timeframe for Project Completion / Phased Construction</inlineHelpText>
    <label>Timeframe for Project Completion</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>