force-app/main/default/objects/Project_Assessment__c/fields/Title_V_Facility__c.field-meta.xml
<CustomField>
    <fullName>Title_V_Facility__c</fullName>
    <label>Title V Facility</label>
    <type>TextArea</type>
</CustomField>