force-app/main/default/objects/Project_Assessment__c/fields/Tree_Mitigation__c.field-meta.xml
<CustomField>
    <fullName>Tree_Mitigation__c</fullName>
    <label>Tree Mitigation</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>