force-app/main/default/objects/Project_Assessment__c/fields/Tribal_Consultation__c.field-meta.xml
<CustomField>
    <fullName>Tribal_Consultation__c</fullName>
    <label>Tribal Consultation</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>