force-app/main/default/objects/Project_Assessment__c/fields/Underground_Storage_Tanks__c.field-meta.xml
<CustomField>
    <fullName>Underground_Storage_Tanks__c</fullName>
    <label>Underground Storage Tanks</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>