force-app/main/default/objects/Project_Assessment__c/fields/Underground_Utility_Scan__c.field-meta.xml
<CustomField>
    <fullName>Underground_Utility_Scan__c</fullName>
    <label>Underground Utility Scan</label>
    <type>TextArea</type>
</CustomField>