force-app/main/default/objects/Project_Assessment__c/fields/Unique_environmental_applicability__c.field-meta.xml
<CustomField>
    <fullName>Unique_environmental_applicability__c</fullName>
    <inlineHelpText>Unique environmental applicability (document needed)</inlineHelpText>
    <label>Unique environmental applicability</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>