force-app/main/default/objects/Project_Assessment__c/fields/Unit_Purchase_Supplement_UPS__c.field-meta.xml
<CustomField>
    <fullName>Unit_Purchase_Supplement_UPS__c</fullName>
    <label>Unit Purchase Supplement (UPS)</label>
    <type>TextArea</type>
</CustomField>