force-app/main/default/objects/Project_Assessment__c/fields/Using_a_mix_of_grid_and_LGen_electricity__c.field-meta.xml
<CustomField>
    <fullName>Using_a_mix_of_grid_and_LGen_electricity__c</fullName>
    <inlineHelpText>&quot;Is the customer using a mix of grid and LGen supplied electricity?&quot;</inlineHelpText>
    <label>Using a mix of grid and LGen electricity</label>
    <length>131071</length>
    <type>LongTextArea</type>
</CustomField>