force-app/main/default/objects/Project_Assessment__c/fields/Utility_allow_3rd_party_ownership_of_DER__c.field-meta.xml
<CustomField>
    <fullName>Utility_allow_3rd_party_ownership_of_DER__c</fullName>
    <inlineHelpText>If applicable, does the interconnecting utility allow 3rd-party ownership of DERs?</inlineHelpText>
    <label>Utility allow 3rd-party ownership of DER</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>