force-app/main/default/objects/Project_Assessment__c/fields/Utility_Plan__c.field-meta.xml
<CustomField>
    <fullName>Utility_Plan__c</fullName>
    <label>Utility Plan</label>
    <type>TextArea</type>
</CustomField>