force-app/main/default/objects/Project_Assessment__c/fields/Water_Quality__c.field-meta.xml
<CustomField>
    <fullName>Water_Quality__c</fullName>
    <label>Water Quality</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>