force-app/main/default/objects/Project_Assessment__c/fields/Water_wetlands_Permitting__c.field-meta.xml
<CustomField>
    <fullName>Water_wetlands_Permitting__c</fullName>
    <label>Water/wetlands Permitting</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>