force-app/main/default/objects/Project_Assessment__c/fields/Who_will_submit_invoices_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Who_will_submit_invoices_to_Customer__c</fullName>
    <inlineHelpText>Who from MSE will submit invoices to Customer?</inlineHelpText>
    <label>Who will submit invoices to Customer?</label>
    <length>200</length>
    <type>Text</type>
</CustomField>